--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,8 @@ jobs:
       uses: golangci/golangci-lint-action@v6
       with:
         version: v1.56.2
+      env:
+        GOPATH: /home/runner/go  
   
   push:
     runs-on: ubuntu-latest
