feat: resolving code quality job2

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,15 +36,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: v1.56.2
-      env:
-        GOPATH: /home/runner/go  
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.22
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.56.2
+          working-directory: ./
+        env:
+          GOPATH: /home/runner/go
+  
   
   push:
     runs-on: ubuntu-latest
